tests/NormalTests/paczka1/small_fuzzy/14073903.err
Error in line 3: 96Sf S611 13,2
Error in line 10: 96Sf S611 41,85
Error in line 5: 96Sf A117 36,7
